added scss and changed the names of the scss files from Name.scss to Name.module.scss

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,11 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@pages": [
-        "src/pages"
+      "@icons/*": [
+        "assets/icons/*"
+      ],
+      "@logos/*": [
+        "assets/logos/*"
       ]
     }
   }
